--- a/index.html
+++ b/index.html
@@ -2,21 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+    />
 
-    <meta property="og:title" content="Quraan Academy - Excellence in Quranic Education" />
-    <meta property="og:description" content="Learn Quran, Tajweed, and Arabic with expert tutors. Online courses for all levels." />
+    <meta
+      property="og:title"
+      content="Quraan Academy - Excellence in Quranic Education"
+    />
+    <meta
+      property="og:description"
+      content="Learn Quran, Tajweed, and Arabic with expert tutors. Online courses for all levels."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/attached_assets/hero_image.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Quraan Academy" />
-    <meta name="twitter:description" content="Premium Online Quran & Arabic Education" />
+    <meta
+      name="twitter:description"
+      content="Premium Online Quran & Arabic Education"
+    />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link
+      rel="preload"
+      as="image"
+      href="/attached_assets/generated_images/happy_student_learning_quran.png"
+      fetchpriority="high"
+    />
     <!-- Fonts: Libre Baskerville (Serif/Headings) + Plus Jakarta Sans (Sans/Body) + Scheherazade New (Arabic) -->
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Scheherazade+New:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
